[package]
name = "migtd-policy-generator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
async-std = { version = "1.6.0", default-features = false }
clap = { version = "4.0", features = ["derive"] }
futures = "0.3.30"
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0"
surf = "2.3.2"